[gd_scene load_steps=39 format=2]

[ext_resource path="res://Enemies/Goopo/Goopo.png" type="Texture" id=1]
[ext_resource path="res://Enemies/State_Machine.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Boko/Move.gd" type="Script" id=3]
[ext_resource path="res://Enemies/Boko/Idle.gd" type="Script" id=4]
[ext_resource path="res://Enemies/Boko/Attack.gd" type="Script" id=5]
[ext_resource path="res://Enemies/Slash_Effect_Frames.tres" type="SpriteFrames" id=6]
[ext_resource path="res://Helpers/Sprite_Handler.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/Hit.gd" type="Script" id=8]
[ext_resource path="res://Enemies/Stamina_Bar_Frames.tres" type="SpriteFrames" id=9]
[ext_resource path="res://Enemies/Stamina_Bar.gd" type="Script" id=10]
[ext_resource path="res://Enemies/Boko/Slash_Hitbox.gd" type="Script" id=11]
[ext_resource path="res://Enemies/Sprite.gd" type="Script" id=12]
[ext_resource path="res://Enemies/Move_Particles.tscn" type="PackedScene" id=13]
[ext_resource path="res://Enemies/Die.gd" type="Script" id=14]
[ext_resource path="res://Enemies/Eyes.png" type="Texture" id=15]
[ext_resource path="res://Enemies/Eyes.gd" type="Script" id=16]
[ext_resource path="res://Enemies/AI_Move.gd" type="Script" id=17]
[ext_resource path="res://Enemies/Death_Right.tres" type="Animation" id=18]
[ext_resource path="res://Enemies/Death_Left.tres" type="Animation" id=19]
[ext_resource path="res://Shaders/Idle.tres" type="Material" id=20]
[ext_resource path="res://Enemies/Shadow.tscn" type="PackedScene" id=21]
[ext_resource path="res://Enemies/Move.tres" type="Animation" id=22]
[ext_resource path="res://Enemies/Hit_Particles.tscn" type="PackedScene" id=23]
[ext_resource path="res://Enemies/Slash_Right.tres" type="Animation" id=24]
[ext_resource path="res://Enemies/Slash_Left.tres" type="Animation" id=25]
[ext_resource path="res://Enemies/Boko/Hitbox.gd" type="Script" id=26]
[ext_resource path="res://Enemies/Hearts.tscn" type="PackedScene" id=27]
[ext_resource path="res://Enemies/Foot_Hitbox.tscn" type="PackedScene" id=28]
[ext_resource path="res://Enemies/States/Carted.gd" type="Script" id=29]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.46321
height = 0.377663

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.15296
height = 2.29425

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 5.56358
height = 4.52801

[sub_resource type="Animation" id=9]
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath("../Sprite_Handler")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "flash_on"
}, {
"args": [  ],
"method": "flash_off"
} ]
}

[sub_resource type="Animation" id=10]
length = 0.5

[sub_resource type="Animation" id=11]
length = 2.5
step = 0.23
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.84, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.3, 1.3 ) ]
}

[node name="Goopo" type="KinematicBody2D" groups=["Boko", "Cartable", "Monster"]]
scale = Vector2( 5, 5 )
collision_layer = 2
collision_mask = 23
script = ExtResource( 2 )
START_STATE = NodePath("States/Idle")

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 5
script = ExtResource( 26 )

[node name="Collision" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Foot_Hitbox" parent="." instance=ExtResource( 28 )]
collision_layer = 1
monitorable = false

[node name="Sprite_Handler" parent="." instance=ExtResource( 7 )]

[node name="Sprite" type="AnimatedSprite" parent="."]
material = ExtResource( 20 )
scale = Vector2( -1, 1 )
frames = SubResource( 14 )
script = ExtResource( 12 )

[node name="Eyes" type="Sprite" parent="Sprite"]
material = ExtResource( 20 )
texture = ExtResource( 15 )
script = ExtResource( 16 )
__meta__ = {
"_editor_description_": ""
}

[node name="Slash_Effect" type="AnimatedSprite" parent="Sprite" groups=["No_Flash"]]
visible = false
z_index = 50
z_as_relative = false
frames = ExtResource( 6 )
frame = 9

[node name="Slash_Animation" type="AnimationPlayer" parent="Sprite/Slash_Effect"]
anims/Slash_Left = ExtResource( 25 )
anims/Slash_Right = ExtResource( 24 )

[node name="Slash_Hitbox" type="Area2D" parent="Sprite/Slash_Effect" groups=["Monster_Hitbox"]]
collision_layer = 2
collision_mask = 5
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Slash_Effect/Slash_Hitbox"]
scale = Vector2( 0.392614, 0.525361 )
shape = SubResource( 8 )
disabled = true

[node name="Animation" type="AnimationPlayer" parent="Sprite"]
anims/Death_Left = ExtResource( 19 )
anims/Death_Right = ExtResource( 18 )
anims/Hit = SubResource( 9 )
anims/Idle = SubResource( 10 )
anims/Move = ExtResource( 22 )

[node name="Stamina_Bar" type="AnimatedSprite" parent="." groups=["No_Flash"]]
position = Vector2( 0, 6 )
frames = ExtResource( 9 )
script = ExtResource( 10 )

[node name="Bar_Animation" type="AnimationPlayer" parent="Stamina_Bar"]
anims/Fill = SubResource( 11 )

[node name="Hearts" parent="." instance=ExtResource( 27 )]

[node name="Shadow" parent="." instance=ExtResource( 21 )]

[node name="Move_Particles" parent="." instance=ExtResource( 13 )]
amount = 2
lifetime = 0.5

[node name="Hit_Particles" parent="." instance=ExtResource( 23 )]

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="Move" type="Node" parent="States"]
script = ExtResource( 3 )
MAX_MOVESPEED = 100.0

[node name="AI_Move" type="KinematicBody2D" parent="States"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 17 )
SEEK_RADIUS = 70

[node name="Seek_Collision_Mask" type="Area2D" parent="States/AI_Move"]
collision_layer = 0
collision_mask = 2

[node name="Run_Cooldown" type="Timer" parent="States/AI_Move"]
wait_time = 4.0
one_shot = true

[node name="Attack" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="Cooldown_Timer" type="Timer" parent="States/Attack"]
wait_time = 0.1
one_shot = true

[node name="Hit" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="Cooldown" type="Timer" parent="States/Hit"]
wait_time = 0.5
one_shot = true

[node name="Carted" type="Node" parent="States"]
script = ExtResource( 29 )

[node name="Die" type="Node" parent="States"]
script = ExtResource( 14 )

[connection signal="hit" from="." to="Hearts" method="_on_Monster_hit"]
[connection signal="animation_finished" from="Sprite/Slash_Effect/Slash_Animation" to="States/Attack" method="_on_Slash_Animation_animation_finished"]
[connection signal="animation_finished" from="Sprite/Animation" to="." method="_on_animation_finished"]
[connection signal="animation_finished" from="Stamina_Bar/Bar_Animation" to="Stamina_Bar" method="_on_Bar_Animation_animation_finished"]
[connection signal="animation_started" from="Stamina_Bar/Bar_Animation" to="Stamina_Bar" method="_on_Bar_Animation_animation_started"]
[connection signal="timeout" from="States/AI_Move/Run_Cooldown" to="States/AI_Move" method="_on_Run_Cooldown_timeout"]
[connection signal="timeout" from="States/Attack/Cooldown_Timer" to="States/Attack" method="_on_Cooldown_Timer_timeout"]
[connection signal="timeout" from="States/Hit/Cooldown" to="States/Hit" method="_on_Cooldown_timeout"]
